# nexuslb

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  LICENSE  README.md  build-deps.bash  libtensorflow_cc
.github/workflows/: pre-commit.yaml
examples/: README.md
examples/face_rec/src/: face_rec.cpp
examples/obj_rec/src/: obj_rec.cpp
examples/simple_app/src/: frontend.cpp  multimodel-example.yaml  multimodel.cpp  simple.cpp
examples/traffic_complex/src/: traffic_complex.cpp
python/nexus/: async_client.py  client.py
src/ario/: ario.h  callback_queue.cpp  callback_queue.h  chrono.h  circular_completion_queue.h  epoll.cpp  epoll.h  error.h  interrupter.cpp  interrupter.h  memory.cpp  memory.h  rdma.cpp  rdma.h  small_function.h  tcp.cpp  tcp.h  timer.cpp  timer.h  timerfd.cpp  timerfd.h  utils.cpp  utils.h
src/nexus/app/: app_base.cpp  app_base.h  dispatcher_rpc_client.cpp  dispatcher_rpc_client.h  exec_block.h  frontend.cpp  frontend.h  model_handler.cpp  model_handler.h  query_processor.h  request_context.cpp  request_context.h  rpc_service.cpp  rpc_service.h  user_session.h  worker.cpp  worker.h
src/nexus/backend/: backend_main.cpp  backend_server.cpp  backend_server.h  backup_client.cpp  backup_client.h  batch_plan_context.cpp  batch_plan_context.h  batch_task.cpp  batch_task.h  caffe2_model.cpp  caffe2_model.h  caffe_densecap_model.cpp  caffe_densecap_model.h  caffe_model.cpp  caffe_model.h  darknet_model.cpp  darknet_model.h  gpu_executor.cpp  gpu_executor.h  model_exec.cpp  model_exec.h  model_ins.cpp  model_ins.h  rpc_service.cpp  rpc_service.h  share_prefix_model.cpp  share_prefix_model.h  sleep_model.cpp  sleep_model.h  slice.cpp  slice.h  task.cpp  task.h  tensorflow_model.cpp  tensorflow_model.h  tensorflow_wrapper.cpp  tf_share_model.cpp  tf_share_model.h  utils.cpp  utils.h  (+2 more)
src/nexus/common/: backend_pool.cpp  backend_pool.h  block_queue.h  buffer.cpp  buffer.h  config.h  connection.cpp  connection.h  data_type.cpp  data_type.h  device.cpp  device.h  functional.h  gapgen.cpp  gapgen.h  image.cpp  image.h  message.cpp  message.h  metric.cpp  metric.h  model_db.cpp  model_db.h  model_def.h  rdma_sender.cpp  rdma_sender.h  rpc_call.h  rpc_service_base.h  rps_meter.cpp  rps_meter.h  server_base.cpp  server_base.h  sleep_profile.cpp  sleep_profile.h  spinlock.h  time_util.cpp  time_util.h  typedef.h  util.cpp  util.h  (+2 more)
src/nexus/dispatcher/: accessor.cpp  accessor.h  accessor_impl.cpp  accessor_impl.h  backend_delegate.cpp  backend_delegate.h  backend_delegate_impl.cpp  backend_delegate_impl.h  batch_policy.cpp  batch_policy.h  batch_size_estimator.cpp  batch_size_estimator.h  delayed_scheduler.cpp  delayed_scheduler.h  dispatcher.cpp  dispatcher.h  dispatcher_main.cpp  frontend_delegate.cpp  frontend_delegate.h  frontend_delegate_impl.cpp  frontend_delegate_impl.h  global_id_issuer.h  inst_info.cpp  inst_info.h  model_worker.cpp  model_worker.h  query_context.cpp  query_context.h  rank_scheduler.cpp  rank_scheduler.h  rankmt_scheduler.cpp  rankmt_scheduler.h  round_robin_scheduler.cpp  round_robin_scheduler.h  rpc_service.cpp  rpc_service.h  scheduler.h  session_context.cpp  session_context.h
src/nexus/dispatcher/rankmt/: common.cpp  common.h  model_thread.cpp  model_thread.h  rank_thread.cpp  rank_thread.h  scheduler.cpp  scheduler.h
src/nexus/proto/: control.proto  nexus.proto  nnquery.proto
src/nexus/scheduler/: backend_delegate.cpp  backend_delegate.h  complex_query.cpp  complex_query.h  frontend_delegate.cpp  frontend_delegate.h  sch_info.cpp  sch_info.h  scheduler.cpp  scheduler.h
tensorflow/: .bazelrc  BUILD  Makefile  WORKSPACE  tensorflow_wrapper.cpp  version_script.lds
tensorflow/include/nexus/backend/: tensorflow_wrapper.h
tests/: ario.cpp
tests/cpp/: rps_meter_test.cpp  test_main.cpp  value_ranked_map_test.cpp
tests/cpp/scheduler/: backend_delegate_test.cpp  scheduler_test.cpp
tools/: bench_dispatcher.cpp  bench_tcp.cpp  bench_tfshare.cpp  loadgen-example.yaml  loadgen.cpp  test_complex_query.cpp  test_gpu_mem_sharing.cpp  test_preprocessing_scalability.cpp
tools/bench_dispatcher/: bench_dispatcher_main.cpp  bench_rankmt_main.cpp  fake_accessor.cpp  fake_accessor.h  fake_backend.cpp  fake_backend.h  fake_backend_delegate.cpp  fake_backend_delegate.h  fake_frontend.cpp  fake_frontend.h  fake_frontend_delegate.cpp  fake_frontend_delegate.h  run_dispatcher_main.cpp  run_rankmt_example.yaml  run_rankmt_main.cpp  stress_rankmt_main.cpp
tools/nexus_scheduler/: backend_delegate.cpp  backend_delegate.h  fake_nexus_backend.cpp  fake_nexus_backend.h  fake_nexus_frontend.cpp  fake_nexus_frontend.h  fake_object_accessor.h  frontend_delegate.cpp  frontend_delegate.h  gpu_executor.cpp  gpu_executor.h  model_exec.cpp  model_exec.h  model_handler.cpp  model_handler.h  query_collector.cpp  query_collector.h  run_nexus_main.cpp  sch_info.cpp  sch_info.h  scheduler.cpp  scheduler.h
tools/profiler/: profiler.cpp  profiler.py  test_pb.cpp
tools/shepherd/: common.cpp  common.h  fake_accessor.h  fake_shepherd_backend.cpp  fake_shepherd_backend.h  fake_shepherd_frontend.cpp  fake_shepherd_frontend.h  flex_scheduler.cpp  flex_scheduler.h  run_shepherd_main.cpp
